Dupliface: Inherit scale didn't update viewport render #41939

Closed
opened 2014-09-24 11:29:32 +02:00 by Leon Cheung · 8 comments
Member

System Information
Win 8 64bit | GTX680

Blender Version
Broken: 2.72 RC eb464ee

Short description of error
Tweaking Inherit Scale value doesn't update viewport render unless tweaking something else, for both BI and Cycles.

Exact steps for others to reproduce the error
Please see attachment. To be honest, I'm not sure if it can be strictly a bug, sorry if not. Thanks for checking.

Inherit_scale.png

dupliface.blend

**System Information** Win 8 64bit | GTX680 **Blender Version** Broken: 2.72 RC eb464ee **Short description of error** Tweaking Inherit Scale value doesn't update viewport render unless tweaking something else, for both BI and Cycles. **Exact steps for others to reproduce the error** Please see attachment. To be honest, I'm not sure if it can be strictly a bug, sorry if not. Thanks for checking. ![Inherit_scale.png](https://archive.blender.org/developer/F111980/Inherit_scale.png) [dupliface.blend](https://archive.blender.org/developer/F111982/dupliface.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Bastien Montagne self-assigned this 2014-09-24 19:30:22 +02:00

Not critical, but still a bug (missing update, once again ;) ).

Not critical, but still a bug (missing update, once again ;) ).

This issue was referenced by f1976cbde7

This issue was referenced by f1976cbde7e852db234d2a4acb0ed8d64d53ae2c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f1976cbde7.

Closed by commit f1976cbde7.
Author
Member

Nice! Thanks a lot, mont29! :D

Nice! Thanks a lot, mont29! :D

This issue was referenced by b2c28a3e82

This issue was referenced by b2c28a3e8293e4fb1314cb3143ac5ab2f182ced0
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41939
No description provided.