Fix T41939: Dupliface: Inherit scale doesn't update viewport render.

Render needs un object update it seems...